--- a/.github/workflows/build-mtkfilogic.yml
+++ b/.github/workflows/build-mtkfilogic.yml
@@ -27,7 +27,7 @@ env:
   REPO_BRANCH: master
   PLATFORM_FILE: configs/filogic.txt
   CONFIG_FILE: configs/packages-L.txt
-  CONFIG_5G: configs/packages-5G.txt
+  #CONFIG_5G: configs/packages-5G.txt
   SETTINGS_SH: scripts/init-settings.sh
   PACKAGES_SH: scripts/packages.sh
   INSTALL5G_SH: scripts/install-5G.sh
