--- a/.github/workflows/build-mtkfilogic.yml
+++ b/.github/workflows/build-mtkfilogic.yml
@@ -30,7 +30,7 @@ env:
   #CONFIG_5G: configs/packages-5G.txt
   SETTINGS_SH: scripts/init-settings.sh
   PACKAGES_SH: scripts/packages.sh
-  INSTALL5G_SH: scripts/install-5G.sh
+  #INSTALL5G_SH: scripts/install-5G.sh
   CLASH_CORE_SH: scripts/preset-clash-core-arm64-L.sh
   ADDMOUNT_SH: scripts/add_automount.sh
   UPLOAD_BIN_DIR: false
