--- a/.github/workflows/build-mtkfilogic.yml
+++ b/.github/workflows/build-mtkfilogic.yml
@@ -32,7 +32,7 @@ env:
   PACKAGES_SH: scripts/packages.sh
   #INSTALL5G_SH: scripts/install-5G.sh
   CLASH_CORE_SH: scripts/preset-clash-core-arm64-L.sh
-  ADDMOUNT_SH: scripts/add_automount.sh
+ # ADDMOUNT_SH: scripts/add_automount.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
   UPLOAD_RELEASE: true
