--- a/.github/workflows/build-mtk-filogic.yml
+++ b/.github/workflows/build-mtk-filogic.yml
@@ -17,7 +17,7 @@ on:
   repository_dispatch:
   workflow_dispatch:
   schedule:
-   - cron: 0 23 * * *
+   - cron: 0 18 * * 3
    #     分,时,日,月,周。每周四 20时执行一次 (UTC时间)
   
 env:
