--- a/.github/workflows/build-mediatek_r30b1.yml
+++ b/.github/workflows/build-mediatek_r30b1.yml
@@ -112,6 +112,7 @@ jobs:
         chmod +x target/linux/mediatek/dts/mt7981b-cmcc-rax3000m.dts
         cp "$GITHUB_WORKSPACE/r30b1/r30b12.dts" target/linux/mediatek/mt7981b-cmcc-rax3000m-nand.dts
         chmod +x target/linux/mediatek/dts/mt7981b-cmcc-rax3000m-nand.dts
+        echo "mt7981b-cmcc-rax3000m-nand.dts"
 
     - name: 空间使用情况2
       if: ${{ !cancelled() }}
