--- a/r30b1/r30b1.dts
+++ b/r30b1/r30b1.dts
@@ -47,47 +47,48 @@
 	};
 
 gpio-leds {
-		compatible = "gpio-leds";
+    compatible = "gpio-leds";
 
-		green_led: green_red {
-			label = "green_power";
-			gpios = <&pio 12 GPIO_ACTIVE_LOW>;
-			default-state = "on";
-			linux,default-trigger = "default-on";
-		};
+    green_led: power_red {
+        label = "red:power";  /* 修正为红色电源 */
+        gpios = <&pio 12 GPIO_ACTIVE_LOW>;
+        default-state = "on";
+        linux,default-trigger = "default-on";
+    };
 
-		system_led: wan_green {
-			label = "green:wan";
-			gpios = <&pio 6 GPIO_ACTIVE_LOW>;
-		};
+    /* 其他节点保持不变 */
+    system_led: wan_green {
+        label = "green:wan";
+        gpios = <&pio 6 GPIO_ACTIVE_LOW>;
+    };
 
-		wan_red {
-			label = "red:wan";
-			gpios = <&pio 5 GPIO_ACTIVE_LOW>;
-		};
+    wan_red {
+        label = "red:wan";
+        gpios = <&pio 5 GPIO_ACTIVE_LOW>;
+    };
 
-		mesh_blue {
-			label = "blue:mesh";
-			gpios = <&pio 13 GPIO_ACTIVE_LOW>;
-		};
+    mesh_blue {
+        label = "blue:mesh";
+        gpios = <&pio 13 GPIO_ACTIVE_LOW>;
+    };
 
-		wifi_green {
-			label = "green:wifi";
-			gpios = <&pio 34 GPIO_ACTIVE_LOW>;
-		};
+    wifi_green {
+        label = "green:wifi";
+        gpios = <&pio 34 GPIO_ACTIVE_LOW>;
+    };
 
-		internet_blue {
-			label = "blue:internet";
-			gpios = <&pio 11 GPIO_ACTIVE_LOW>;
-		};
+    internet_blue {
+        label = "blue:internet";
+        gpios = <&pio 11 GPIO_ACTIVE_LOW>;
+    };
 
-		red_led {
-			label = "ctrl_all";
-			gpios = <&pio 8 GPIO_ACTIVE_LOW>;
-			default-state = "on";
-			linux,default-trigger = "default-on";
-		};
-	};
+    red_led {  /* 修正节点名称 */
+        label = "red:system";  /* 修正标签含义 */
+        gpios = <&pio 8 GPIO_ACTIVE_LOW>;
+        default-state = "on";
+        linux,default-trigger = "default-on";
+    };
+};
 
 
 
