--- a/.github/workflows/build-mediatek_r30b1.yml
+++ b/.github/workflows/build-mediatek_r30b1.yml
@@ -109,12 +109,14 @@ jobs:
           chmod +x "$GITHUB_WORKSPACE/$ADDMOUNT_SH" && "$GITHUB_WORKSPACE/$ADDMOUNT_SH"
         fi
         cp $GITHUB_WORKSPACE/r30b1/* target/linux/mediatek/dts
+        cp "$GITHUB_WORKSPACE/r30b1/filogic.mk" target/linux/mediatek/image/filogic.mk
+        
         cp "$GITHUB_WORKSPACE/r30b1/r30b1.dts" target/linux/mediatek/dts/mt7981b-cmcc-rax3000m.dts
         chmod +x target/linux/mediatek/dts/mt7981b-cmcc-rax3000m.dts
         cp "$GITHUB_WORKSPACE/r30b1/r30b12.dts" target/linux/mediatek/mt7981b-cmcc-rax3000m-nand.dts
         chmod +x target/linux/mediatek/dts/mt7981b-cmcc-rax3000m-nand.dts
         
-        echo "mt7981b-cmcc-rax3000m-nand.dts"
+        echo "rax3000m.dts和r30b1文件替换成功"
 
     - name: 空间使用情况2
       if: ${{ !cancelled() }}
