--- a/r30b1/r30b1.dts
+++ b/r30b1/r30b1.dts
@@ -61,7 +61,9 @@
 
 		red_led: led-2 {
 			label = "red:status";
-			gpios = <&pio 35 GPIO_ACTIVE_LOW>;
+			gpios = <&pio 8 GPIO_ACTIVE_LOW>;
+			default-state = "on";
+			linux,default-trigger = "default-on";
 		};
 	};
 };
