Comment out file copy commands in build workflow
Comment out the copy commands for r30b1 files and adjust paths.

--- a/.github/workflows/build-mediatek_r30b1.yml
+++ b/.github/workflows/build-mediatek_r30b1.yml
@@ -108,13 +108,13 @@ jobs:
         if [ -f "$GITHUB_WORKSPACE/$ADDMOUNT_SH" ]; then
           chmod +x "$GITHUB_WORKSPACE/$ADDMOUNT_SH" && "$GITHUB_WORKSPACE/$ADDMOUNT_SH"
         fi
-        cp $GITHUB_WORKSPACE/r30b1/* target/linux/mediatek/dts
+        #cp $GITHUB_WORKSPACE/r30b1/* target/linux/mediatek/dts
         cp "$GITHUB_WORKSPACE/r30b1/filogic.mk" target/linux/mediatek/image/filogic.mk
         
-        cp "$GITHUB_WORKSPACE/r30b1/r30b1.dts" target/linux/mediatek/dts/mt7981b-cmcc-rax3000m.dts
-        chmod +x target/linux/mediatek/dts/mt7981b-cmcc-rax3000m.dts
-        cp "$GITHUB_WORKSPACE/r30b1/r30b12.dts" target/linux/mediatek/mt7981b-cmcc-rax3000m-nand.dts
-        chmod +x target/linux/mediatek/dts/mt7981b-cmcc-rax3000m-nand.dts
+        cp "$GITHUB_WORKSPACE/r30b1/mt7981b-cmcc-rax3000m.dts" target/linux/mediatek/dts/mt7981b-cmcc-rax3000m.dts
+        #chmod +x target/linux/mediatek/dts/mt7981b-cmcc-rax3000m.dts
+        cp "$GITHUB_WORKSPACE/r30b1/mt7981b-cmcc-rax3000m-nand.dts" target/linux/mediatek/mt7981b-cmcc-rax3000m-nand.dts
+        #chmod +x target/linux/mediatek/dts/mt7981b-cmcc-rax3000m-nand.dts
         
         echo "rax3000m.dts和r30b1文件替换成功"
 
