--- a/r30b1/mt7981b-cmcc-rax3000m.dts
+++ b/r30b1/mt7981b-cmcc-rax3000m.dts
@@ -14,9 +14,9 @@
 	compatible = "cmcc,rax3000m", "mediatek,mt7981";
 
 	aliases {
-		led-boot = &red_led;
-		led-failsafe = &red_led;
-		led-running = &green_led;
+		led-boot = &green_led;
+		led-failsafe = &blue_led;
+		led-running = &red_led;
 		led-upgrade = &green_led;
 		serial0 = &uart0;
 	};
@@ -54,7 +54,7 @@
 			gpios = <&pio 6 GPIO_ACTIVE_LOW>;
 		};
 
-		led-1 {
+		blue_led: led-1 {
 			label = "blue:status";
 			gpios = <&pio 13 GPIO_ACTIVE_LOW>;
 		};
