--- a/r30b1/mt7981b-cmcc-rax3000m-nand.dts
+++ b/r30b1/mt7981b-cmcc-rax3000m-nand.dts
@@ -4,7 +4,7 @@
 #include "mt7981b-cmcc-rax3000m.dts"
 
 / {
-	model = "CMCC RAX3000M (NAND version)";
+	model = "CLT R30B1";
 	compatible = "cmcc,rax3000m-nand", "mediatek,mt7981";
 
 	aliases {
