--- a/.github/workflows/build-mediatek_r30b1.yml
+++ b/.github/workflows/build-mediatek_r30b1.yml
@@ -109,7 +109,7 @@ jobs:
           chmod +x "$GITHUB_WORKSPACE/$ADDMOUNT_SH" && "$GITHUB_WORKSPACE/$ADDMOUNT_SH"
         fi
         #cp $GITHUB_WORKSPACE/r30b1/* target/linux/mediatek/dts
-        #cp "$GITHUB_WORKSPACE/r30b1/filogic.mk" target/linux/mediatek/image/filogic.mk
+        cp "$GITHUB_WORKSPACE/r30b1/filogic.mk" target/linux/mediatek/image/filogic.mk
         
         cp "$GITHUB_WORKSPACE/r30b1/mt7981b-cmcc-rax3000m.dts" target/linux/mediatek/dts/mt7981b-cmcc-rax3000m.dts
         #chmod +x target/linux/mediatek/dts/mt7981b-cmcc-rax3000m.dts
