--- a/r30b1/mt7981b-cmcc-rax3000m.dts
+++ b/r30b1/mt7981b-cmcc-rax3000m.dts
@@ -62,8 +62,8 @@
 		red_led: led-2 {
 			label = "red:status";
 			gpios = <&pio 12 GPIO_ACTIVE_LOW>;
-			default-state = "on";
-			linux,default-trigger = "default-on";
+			#default-state = "on";
+			#linux,default-trigger = "default-on";
 		};
 	};
 };
