--- a/r30b1/mt7981b-clt-r30b1-112m.dts
+++ b/r30b1/mt7981b-clt-r30b1-112m.dts
@@ -5,7 +5,7 @@
 
 / {
 	model = "CLT R30B1";
-	compatible = "cmcc,rax3000m-nand", "mediatek,mt7981";
+	compatible = "clt,r30b1-112m", "mediatek,mt7981";
 
 	aliases {
 		label-mac-device = &gmac1;
