--- a/r30b1/mt7981b-clt-r30b1-112m.dts
+++ b/r30b1/mt7981b-clt-r30b1-112m.dts
@@ -1,7 +1,7 @@
 // SPDX-License-Identifier: GPL-2.0-or-later OR MIT
 
 /dts-v1/;
-#include "mt7981b-cmcc-rax3000m.dts"
+#include "mt7981b-clt-r30b1.dts"
 
 / {
 	model = "CLT R30B1";
