--- a/.github/workflows/build-mediatek_r30b1.yml
+++ b/.github/workflows/build-mediatek_r30b1.yml
@@ -120,7 +120,7 @@ jobs:
         cp "$GITHUB_WORKSPACE/r30b1/02_network" target/linux/mediatek/filogic/base-files/etc/board.d/02_network
 
         #cp "$GITHUB_WORKSPACE/r30b1/feeds.conf.default" /feeds.conf.default
-
+        cp "$GITHUB_WORKSPACE/r30b1/zzz-default-settings" package/lean/default-settings/files/zzz-default-settings
         cp "$GITHUB_WORKSPACE/r30b1/npc/rc.local" package/base-files/files/etc/rc.local
         chmod +x package/base-files/files/etc/rc.local
         #cp "$GITHUB_WORKSPACE/r30b1/npc/npc" package/base-files/files/etc/init.d/npc
