--- a/.github/workflows/build-mediatek_r30b1.yml
+++ b/.github/workflows/build-mediatek_r30b1.yml
@@ -84,6 +84,7 @@ jobs:
       run: |
         cd openwrt
         ./scripts/feeds update -a
+        ./scripts/feeds update luci
         ./scripts/feeds install -a
 
     - name: 导入补丁和配置 & 执行脚本
