--- a/.github/workflows/build-mediatek_r30b1.yml
+++ b/.github/workflows/build-mediatek_r30b1.yml
@@ -229,7 +229,7 @@ jobs:
         rm -rf *.buildinfo 
         rm -rf *.json 
         rm -rf *.manifest 
-        rm -rf packages
+        #rm -rf packages
         rm -rf *-kernel.bin
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
